# ohtu-s23-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  retro.md
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  bibtex_writer.py  build.py  database_connection.py  file_io.py  index.py  initialize_database.py  stub_io.py
src/entities/: article_reference.py  book_reference.py  inproceedings_reference.py  reference.py
src/repositories/: reference_repository.py
src/services/: doi_service.py  reference_service.py
src/tests/: app_test.py  article_reference_test.py  bibtex_writer_test.py  book_reference_test.py  conftest.py  console_io_test.py  doi_service_test.py  inproceedings_reference_test.py  reference_repository_test.py  reference_service_test.py
src/tests/robot/: add_article_reference.robot  add_book_reference.robot  add_inproceedings_reference.robot  add_reference_with_doi.robot  add_tag.robot  create_bibtext_file.robot  delete_book_reference.robot  delete_reference.robot  help_command.robot  resource.robot  search_tag.robot  show_tags.robot
